<resources>
    <string name="app_name">Halley Bistro</string>
    <string name="welcome_to_halley_s_bistro">Welcome To Halley\'s Bistro</string>
    <string name="get_started">Get Started</string>
    <string name="order_your_favourite_food_now">Order Your Favourite Food Now\nAnd Get Delivered At your doorstep</string>
    <string name="please_fill_out_the_details_to_get_started">*Please fill out the details to get started</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user">Already a user?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="login">Login To Your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_here">Reset Here</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="a_one_time_password_has_been_sent_on_your_mobile_number">A One Time Password has been sent on your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_an_otp">Didn\'t received an OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="we_are_sending_an_otp_to_your_mobile_number_please_wait_ndo_not_press_back_button">We are sending an OTP to your mobile number please wait!\nDo not Press Back Button</string>

</resources>